--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "main": "index.js",
   "repository": "https://github.com/SamX23/binar-chapter-6",
   "author": "sami",
+  "scripts": {
+    "start": "nodemon ./bin/www"
+  },
   "license": "MIT",
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "nodemon": "^2.0.12"
   }
