--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "license": "MIT",
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.2",
     "nodemon": "^2.0.12",
     "pg": "^8.6.0",
     "sequelize": "^6.6.5"
